--- a/WebContent/cms/main/css/style.css
+++ b/WebContent/cms/main/css/style.css
@@ -69,3 +69,8 @@
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); 
 	-webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; 
 }
+.cms_title{
+	
+	background:#27221c;  
+	padding:0px
+}
